@@ -11,7 +11,7 @@ apply plugin: 'net.minecraftforge.gradle.forge'
 //Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 
 
-version = "1.12.2-v2.0.2"
+version = "1.12.2-v2.0.3"
 group = "zollerngalaxy" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "ZollernGalaxy"
 
