@@ -1,3 +1,3 @@
 {
-	"latest_version" : "2.0.2"
+	"latest_version" : "2.0.3"
 }
