@@ -12,7 +12,7 @@ import net.minecraft.world.World;
 import net.minecraftforge.fml.relauncher.Side;
 import net.minecraftforge.fml.relauncher.SideOnly;
 import zollerngalaxy.core.enums.EnumBlockType;
-import zollerngalaxy.core.enums.EnumHarvestLevel;
+import zollerngalaxy.core.enums.EnumHarvestLevelZG;
 
 public class ZGBlockGrass extends ZGBlockDirt implements IGrowable {
 	
@@ -23,7 +23,7 @@ public class ZGBlockGrass extends ZGBlockDirt implements IGrowable {
 		this.setTickRandomly(true);
 		this.setShouldJSONIgnore(true);
 		this.setBlockType(EnumBlockType.GRASS);
-		this.setBlockHarvestLevel("shovel", EnumHarvestLevel.IRON.getHarvestLevel());
+		this.setBlockHarvestLevel("shovel", EnumHarvestLevelZG.IRON.getHarvestLevel());
 	}
 	
 	public ZGBlockGrass(String blockName) {
