@@ -6,7 +6,15 @@ import com.mjr.planetprogression.api.research.ResearchHooksMP;
 
 public class PlanetProgressionCompatibility {
 	
-	public static boolean hasUnlockedCelestialBody(EntityPlayerMP player, CelestialBody body) {
+	/**
+	 * Checks to see if the destination has been researched or not when using
+	 * Planet Progressions.
+	 * 
+	 * @param player
+	 * @param body
+	 * @return Whether or not the Celestial Body has been researched yet or not.
+	 */
+	public static boolean hasResearched(EntityPlayerMP player, CelestialBody body) {
 		return ResearchHooksMP.hasUnlockedCelestialBody(player, body);
 	}
 }
