@@ -19,7 +19,7 @@ public class ZGInfo {
 	public static final String PROXY_SERVER = PROXY_LOCATION + "CommonProxy";
 	public static final String CHANNEL = ZGInfo.MOD_ID;
 	public static final String FORGE_MODS = "before:planetprogression@[1.12.2-0.3.8,];";
-	public static final String FORGE_VERSION = "after:forge@[14.23.1.2555,);";
+	public static final String FORGE_VERSION = "after:forge@[14.23.5.2838,);";
 	public static final String DEPENDENCIES = "required-after:galacticraftcore@[4.0.2.-1,);"
 			+ "required-after:galacticraftplanets@[4.0.2.-1,); required-after:micdoodlecore; "
 			+ ZGInfo.FORGE_VERSION + ZGInfo.FORGE_MODS;
